<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation.xml"
            app:startDestination="@+id/home_dest">

    <fragment
            android:id="@+id/home_dest"
            android:name="com.goldenowl.ecommerce.HomeFragment"
            android:label="@string/home"
            tools:layout="@layout/home_fragment">



    </fragment>
    <fragment
            android:id="@+id/shop_dest"
            android:name="com.goldenowl.ecommerce.ShopFragment"
            android:label="@string/shop"
            tools:layout="@layout/shop_fragment">



    </fragment>
    <fragment
            android:id="@+id/bag_dest"
            android:name="com.goldenowl.ecommerce.BagFragment"
            android:label="@string/bag"
            tools:layout="@layout/bag_fragment">

        <action android:id="@+id/next_action" app:destination="@id/checkout_dest"/>
    </fragment>
    <fragment
            android:id="@+id/favorites_dest"
            android:name="com.goldenowl.ecommerce.FavoritesFragment"
            android:label="@string/favorites"
            tools:layout="@layout/favorites_fragment">

    </fragment>

    <fragment
            android:id="@+id/profile_dest"
            android:name="com.goldenowl.ecommerce.ProfileFragment"
            android:label="@string/profile"
            tools:layout="@layout/profile_fragment">

    </fragment>

    <fragment
            android:id="@+id/checkout_dest"
            android:name="com.goldenowl.ecommerce.CheckoutFragment"
            android:label="@string/checkout"
            tools:layout="@layout/checkout_fragment">

    </fragment>


</navigation>