<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@+id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="com.goldenowl.ecommerce.ui.global.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_view_all"
            app:destination="@id/category_dest" />
    </fragment>

    <fragment
        android:id="@+id/category_dest"
        android:name="com.goldenowl.ecommerce.ui.global.home.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category">

        <action
            android:id="@+id/action_go_favorite"
            app:destination="@id/favorites_dest" />
    </fragment>
    <fragment
        android:id="@+id/shop_dest"
        android:name="com.goldenowl.ecommerce.ui.global.shop.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop">


        <action
            android:id="@+id/action_view_all"

            app:destination="@id/category_dest" />
    </fragment>
    <fragment
        android:id="@+id/bag_dest"
        android:name="com.goldenowl.ecommerce.ui.global.bag.BagFragment"
        android:label="@string/bag"
        tools:layout="@layout/fragment_bag">

        <action
            android:id="@+id/next_action"
            app:destination="@id/checkout_dest" />
    </fragment>
    <fragment
        android:id="@+id/favorites_dest"
        android:name="com.goldenowl.ecommerce.ui.global.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites">

    </fragment>

    <fragment
        android:id="@+id/profile_dest"
        android:name="com.goldenowl.ecommerce.ui.global.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/next_action"
            app:destination="@id/settings_dest" />
        />
    </fragment>

    <fragment
        android:id="@+id/checkout_dest"
        android:name="com.goldenowl.ecommerce.ui.global.bag.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_checkout">

    </fragment>

    <fragment
        android:id="@+id/settings_dest"
        android:name="com.goldenowl.ecommerce.ui.global.profile.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">

    </fragment>


</navigation>