<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="76980-no-internet.json"
        app:lottie_loop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_1"
            style="@style/TextAppearance.MyApp.Text14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_connection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animation_view" />

        <TextView
            android:id="@+id/tv_2"
            style="@style/TextAppearance.MyApp.Text16.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pls_check_internet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_back"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@color/red_dark"
            android:contentDescription="@string/view_all_items"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/go_back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:shapeAppearanceOverlay="@style/RoundedButtonShape" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
