<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/bottom_sheet"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/grey_background"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior"
>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password_change"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:layout_marginTop="36dp"
        android:textStyle="bold"
    />

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:id="@+id/layout_personal_password"

                  android:layout_marginTop="18dp"
                  android:layout_marginStart="16dp"
                  android:layout_marginEnd="16dp"
    >
        <!--old password-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout_overlay"
            android:id="@+id/input_layout_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"

        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:hint="@string/old_password"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_gravity="right"
                  android:layout_marginTop="14dp"
            android:id="@+id/tv_forgot_password"
                  android:text="@string/forgot_password"/>
        <!--        new password-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout_overlay"
            android:id="@+id/input_layout_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:endIconMode="password_toggle"
            android:layout_marginTop="24dp"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:hint="@string/new_password"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <!--repeat password-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout_overlay"
            android:id="@+id/input_layout_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:endIconMode="password_toggle"

            android:layout_marginTop="32dp"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:hint="@string/repeat_new_password"
            />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <com.goldenowl.ecommerce.ui.customview.RedButton android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:text="@string/save_password"
                                                     android:id="@+id/btn_save_password"
                                                     android:layout_marginTop="32dp"
                                                     android:layout_marginBottom="48dp"
    />
</LinearLayout>

