<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading" />

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/password_change"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">
            <!--old password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_old_password"
                style="@style/TextInputLayout_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="14dp"
                android:text="@string/forgot_password" />
            <!--        new password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_new_password"
                style="@style/TextInputLayout_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--repeat password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_repeat_password"
                style="@style/TextInputLayout_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"

                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_new_password"
                    android:inputType="textPassword"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="48dp"
            android:text="@string/save_password"
            app:shapeAppearanceOverlay="@style/RoundedButtonShape" />


    </LinearLayout>

</FrameLayout>